--- a/src/app/produto-form/produto-form.component.html
+++ b/src/app/produto-form/produto-form.component.html
@@ -15,8 +15,8 @@
       <div fxLayout="row" fxLayoutAlign="space-between start">
   
         <mat-form-field fxFlex="60">
-          <mat-select placeholder="Department"  [(ngModel)]= "departamentos">
-            <mat-option *ngFor= 'let dep of departamentos' [value]= "dep">{{dep.nome}}</mat-option>
+          <mat-select placeholder="Department"  [(ngModel)]= "departamentoos">
+            <mat-option *ngFor= 'let dep of departamentoos' [value]= "dep">{{dep.nome}}</mat-option>
           </mat-select>
         </mat-form-field>   
   
