--- a/src/app/produto-form/produto-form.component.html
+++ b/src/app/produto-form/produto-form.component.html
@@ -13,10 +13,10 @@
       </div>
       
       <div fxLayout="row" fxLayoutAlign="space-between start">
-  
+
         <mat-form-field fxFlex="60">
-          <mat-select placeholder="Department"  [(ngModel)]= "departamentoos">
-            <mat-option *ngFor= 'let dep of departamentoos' [value]= "dep">{{dep.nome}}</mat-option>
+          <mat-select placeholder="Departmennnt"  [(ngModel)]="departamentoos">
+            <mat-option *ngFor='let dep of departamentoos' [value]="dep">{{dep.nome}}</mat-option>
           </mat-select>
         </mat-form-field>   
   
